[gd_scene load_steps=3 format=3 uid="uid://74pemylvwywk"]

[ext_resource type="Script" uid="uid://xwjlk7k5wqtg" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[sub_resource type="Theme" id="Theme_n87rw"]
CheckBox/colors/checkbox_checked_color = Color(1, 1, 1, 1)
CheckBox/colors/icon_disabled_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.38170326, 0.38170323, 0.38170317, 0.3529412)

[node name="FullscreenCheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 424.0
offset_right = 139.0
offset_bottom = 455.0
theme = SubResource("Theme_n87rw")
text = "Fullscreen"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -20.0
offset_right = 36.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="ReturnToMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="toggled" from="FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="button_up" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="button_up" from="VBoxContainer/ReturnToMenuButton" to="." method="_on_return_to_menu_button_button_up"]
[connection signal="button_up" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
